# SurfRemesh

./: .gitignore  CMakeLists.txt  README.md
app/: edge_stats.cpp
src/: SurfRemesh.cpp  SurfRemesh.h  trilib.hpp  veclib.hpp
tests/: test_edge.cpp  test_face.cpp  test_mesh.cpp  test_trilib.cpp  test_veclib.cpp
